--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
         
     - name: Push Docker Image
       run: |
-        docker push jj269213/docker-graphql:0.0.2 .
+        docker push jj269213/docker-graphql:0.0.2
     
     
     
